Rename `Error` model to `ErrorMessage`
Else the model clashes with typescript names
