# api/src/main/openapi/astro-server.yaml
@@ -67,7 +67,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/ErrorMessage'
   '/v1/open-ngc/{objectName}':
     parameters:
       - schema:
@@ -91,7 +91,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/ErrorMessage'
       operationId: getObject
       description: Get a specific object
   /v1/open-ngc/fetch:
@@ -101,6 +101,10 @@ paths:
       responses:
         '204':
           description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
       tags:
         - OpenNGC
       description: Fetch catalog
@@ -210,7 +214,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: '#/components/schemas/ErrorMessage'
       operationId: listObjectsExtended
       description: Get catalog entries with horizon coordinates
 components:
@@ -367,8 +371,8 @@ components:
       required:
         - abbrev
         - fullname
-    Error:
-      title: Error
+    ErrorMessage:
+      title: Error Message
       type: object
       description: Error message
       properties:
